# adb-mcp

./: .gitignore  LICENSE  README.md  example_usage.md  package-lock.json  package.json  pyproject.toml  run_server.py  test_server.py
src/: index.ts
src/android_adb_mcp_server/: __init__.py  main.py
